# wildcamtools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: shellcheck.yml
src/wildcamtools/: __main__.py
src/wildcamtools/cli/: __init__.py  motion_mog2.py  perftest.py  rescale.py  rtsp.py
src/wildcamtools/lib/: __init__.py  background_process.py  errors.py  motion.py  perftest.py  rescale.py  rtsp.py  stats.py  timing.py  vidio.py
tests/: conftest.py
tests/lib/: test_motion.py  test_stats.py  test_vidio.py
